# Copper

./: CMakeLists.txt  README.md
Copper/: CMakeLists.txt
Copper/src/: main.cpp
Copper/src/LangDefs/: DataTypes.hpp  TopDataTypes.hpp  VarValOperators.hpp  Variable.cpp  Variable.hpp  VariablesManager.cpp
Copper/src/Lexer/: Lexer.cpp  Lexer.hpp
Copper/src/Parser/: ExpressionParser.cpp  ExpressionsParser.cpp  Parser.cpp  Parser.hpp
Copper/src/Token/: Token.hpp  TokenType.hpp
CopperDBG/: test.cos
CopperTests/: test.cos
Herbata/: CMakeLists.txt
Herbata/src/: main.cpp
Herbata/src/LangDefs/: DataTypes.hpp  TopDataTypes.hpp  VarValOperators.hpp  Variable.cpp  Variable.hpp  VariablesManager.cpp
Herbata/src/Lexer/: Lexer.cpp  Lexer.hpp
Herbata/src/Parser/: ExpressionsParser.cpp  Parser.cpp  Parser.hpp
Herbata/src/Token/: Token.hpp  TokenType.hpp
HerbataDBG/: test.hrbt
